Agregados controladores completos y configuraciones Swagger

--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,8 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=tu_contraseña
-DATABASE_NAME=raicesdb
+DATABASE_NAME=raices_cordoba
 PORT=3000
+JWT_SECRET=supersecreto123
+JWT_EXPIRES_IN=1d
+
