Update Docker context and file paths in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build and Push 
         uses: docker/build-push-action@v5
         with:
-          context: ./Proyecto-Final
-          file: ./Proyecto-Final/Dockerfile
+          context: ./proyecto/Proyecto-Final
+          file: ./proyecto/Proyecto-Final/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/raices_cordoba:latest
            
